# fnClamAV

./: .gitignore  README.md  README_CN.md  build-clamav-cmake.sh  build-clamav-local.sh  build-clamav-shared.sh  build-clamav-static.sh  build-clamav.sh  build-ffi.sh  build.sh  copy-clamav.sh  install-deps.sh  manifest  package-lock.json  resize-icons.js  resize-root-icons.js
.github/workflows/: build-release.yml
app/config/: freshclam.conf
app/lib/: libclammspack.so.0  libclamunrar.so.12  libclamunrar_iface.so.12
app/ui/: config  index.cgi
app/www/: index.html
app/www/css/: style.css
app/www/js/: app.js  main.js
cmd/: install_callback  main
config/: resource  settings.json
docs/: CLAMAV_SETUP.md  feinuiu-dev-guide.md
docs/plans/: 2026-02-10-clamav-antivirus-app-design.md
rust-cgi/: Cargo.toml
rust-cgi/src/: clamav.rs  db.rs  main.rs
rust-server/: Cargo.toml  build.rs  build.sh
rust-server/src/: env.rs  lib.rs  main.rs
rust-server/src/clamav/: engine.rs  ffi.rs  manager.rs  mod.rs  types.rs
rust-server/src/clamav/tests/: ffi_test.rs
rust-server/src/handlers/: config.rs  health.rs  mod.rs  quarantine.rs  scan.rs  threat.rs  update.rs
rust-server/src/models/: config.rs  mod.rs  quarantine.rs  scan.rs  threat.rs  update.rs
rust-server/src/services/: clamav.rs  db.rs  mod.rs  quarantine.rs  scan.rs  state.rs  update.rs
