[package]
name = "clamav-daemon"
version = "1.0.0"
edition = "2021"

[dependencies]
# HTTP server framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
anyhow = "1"

# Date/time
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
async-trait = "0.1"

# Environment variables
dotenvy = "0.15"

# Process management
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
